--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,21 @@
         <maven-jar-plugin.version>3.3.0</maven-jar-plugin.version>
         <maven-surefire-plugin.version>3.2.2</maven-surefire-plugin.version>
         <maven-install-plugin.version>3.1.1</maven-install-plugin.version>
+        <docker-maven-plugin.version>0.33.0</docker-maven-plugin.version>
     </properties>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>3.2.5</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
+        </dependencies>
+    </dependencyManagement>
 
     <dependencies>
         <dependency>
@@ -138,17 +152,16 @@
                 <version>${maven-install-plugin.version}</version>
                 <executions>
                     <execution>
-                        <id>install-external-jar</id>
-                        <phase>initialize</phase>
+                       <phase>install</phase>
                         <goals>
                             <goal>install-file</goal>
                         </goals>
                         <configuration>
-                            <file>${project.basedir}/lib/desktop-game-engine.jar</file>
                             <groupId>com.javarush</groupId>
                             <artifactId>desktop-game-engine</artifactId>
                             <version>1.0</version>
                             <packaging>jar</packaging>
+                            <file>${project.basedir}/lib/desktop-game-engine.jar</file>
                         </configuration>
                     </execution>
                 </executions>
