--- a/pom.xml
+++ b/pom.xml
@@ -23,18 +23,24 @@
         <docker-maven-plugin.version>0.33.0</docker-maven-plugin.version>
     </properties>
 
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-dependencies</artifactId>
-                <version>3.2.5</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
 
-        </dependencies>
-    </dependencyManagement>
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub Packages</name>
+            <url>https://maven.pkg.github.com/Aleksizz/project-maven</url>
+        </repository>
+    </distributionManagement>
+
+
+
+<repositories>
+        <repository>
+            <id>github</id>
+            <name>project-maven</name>
+            <url>https://maven.pkg.github.com/Aleksizz/project-maven/desktop-game-engine.jar</url>
+        </repository>
+    </repositories>
 
     <dependencies>
         <dependency>
@@ -145,26 +151,6 @@
                 <configuration>
                     <excludes>StrangeTest.java</excludes>
                 </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-install-plugin</artifactId>
-                <version>${maven-install-plugin.version}</version>
-                <executions>
-                    <execution>
-                       <phase>install</phase>
-                        <goals>
-                            <goal>install-file</goal>
-                        </goals>
-                        <configuration>
-                            <groupId>com.javarush</groupId>
-                            <artifactId>desktop-game-engine</artifactId>
-                            <version>1.0</version>
-                            <packaging>jar</packaging>
-                            <file>${project.basedir}/lib/desktop-game-engine.jar</file>
-                        </configuration>
-                    </execution>
-                </executions>
             </plugin>
         </plugins>
     </build>
