--- a/pom.xml
+++ b/pom.xml
@@ -23,25 +23,6 @@
         <docker-maven-plugin.version>0.33.0</docker-maven-plugin.version>
     </properties>
 
-
-    <distributionManagement>
-        <repository>
-            <id>github</id>
-            <name>GitHub Packages</name>
-            <url>https://maven.pkg.github.com/Aleksizz/project-maven</url>
-        </repository>
-    </distributionManagement>
-
-
-
-<repositories>
-        <repository>
-            <id>github</id>
-            <name>project-maven</name>
-            <url>https://maven.pkg.github.com/Aleksizz/project-maven/desktop-game-engine.jar</url>
-        </repository>
-    </repositories>
-
     <dependencies>
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -57,6 +38,8 @@
             <groupId>com.javarush</groupId>
             <artifactId>desktop-game-engine</artifactId>
             <version>1.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/desktop-game-engine.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
